# AeroGraph

./: .gitignore  AGENTS.md  AgentBOX.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE.md  README.md  package-lock.json  package.json  tsconfig.base.json
.agents/skills/speckit-analyze/: SKILL.md
.github/: CODEOWNERS  copilot-instructions.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  parity.yml  python.yml  release-python.yml  schema-governance.yml
.specify/: feature.json  init-options.json  integration.json
.specify/extensions/: .registry
.specify/integrations/: agy.manifest.json  copilot.manifest.json  speckit.manifest.json
.specify/memory/: constitution.md
.specify/templates/: plan-template.md  tasks-template.md
.specify/workflows/: workflow-registry.json
apps/collector/: .env.example  README.md  package.json
apps/collector/src/: server.test.ts  server.ts  sqliteStore.perf.test.ts  sqliteStore.test.ts  sqliteStore.ts  store.test.ts  store.ts  testUtils.ts  types.ts
apps/collector/src/diff/: index.ts  (+4 more)
apps/demo/: package.json
apps/demo/src/: demo.ts  langchain-demo.ts  phase2-demo.ts
apps/web/: index.html  package.json
apps/web/src/: App.tsx  CheckpointView.tsx  JsonView.tsx  RetrieverInspector.tsx  StateInspector.tsx  StreamingMetrics.tsx  api.ts  diff.test.ts  diff.ts  graph.test.ts  graph.ts  lineage.test.ts  lineage.ts  loops.test.ts  loops.ts  styles.css  testUtils.ts
docs/: AeroGraph-product-guide.md  agent-flight-recorder-product-guide.md  python-quickstart.md
docs/architecture/: adapter-lifecycle.md  contract-governance.md  event-flow.md  package-graph.md  python-adapter-futures.md  replay-model.md  system-overview.md
docs/architecture/adrs/: 0001-monorepo-structure.md  0002-contracts-as-source-of-truth.md  0003-sqlite-mvp-persistence.md  0004-append-only-trace-storage.md  0005-react-flow-graph-visualization.md  0006-multi-provider-integration-strategy.md
docs/examples/: python-langchain-example.md
docs/otel/: collector-ingestion.md  end-to-end.md  import-bridge.md  jaeger-validation.md  limitations.md  topology-validation-matrix.md
examples/otel-jaeger-demo/: package.json
examples/otel-jaeger-demo/src/: index.ts
examples/otel-langchain-demo/: package.json
examples/otel-langchain-demo/src/: index.ts
python/: README.md
python/aerograph-langchain/: README.md  pyproject.toml
python/aerograph-langchain/examples/: langchain_demo.py
python/aerograph-langchain/src/aerograph_langchain/: __init__.py  handler.py  langgraph.py  mapping.py  retriever.py  span_ids.py  streaming.py
python/aerograph-langchain/tests/: test_error_handling.py  test_handler_mapping.py  test_langgraph.py  test_retriever.py  test_span_id_derivation.py  test_streaming.py
python/aerograph-langchain/tests/fixtures/: langchain_run.json
python/aerograph-langchain/tests/integration/: test_end_to_end.py
python/aerograph-otel/: README.md  pyproject.toml
python/aerograph-otel/src/aerograph_otel/: __init__.py  constants.py  export.py  import_.py  mapping.py  timestamp.py
python/aerograph-otel/src/aerograph_otel/tests/: __init__.py  test_export.py  test_import.py  test_mapping.py  test_parity.py  test_roundtrip.py  test_timestamp.py
python/aerograph-sdk/: README.md  pyproject.toml
python/aerograph-sdk/examples/: minimal_trace.py
python/aerograph-sdk/src/aerograph_sdk/: __init__.py  events.py  ids.py  json_normalize.py  recorder.py  state_hash.py
python/aerograph-sdk/src/aerograph_sdk/contracts/: __init__.py  generated.py
python/aerograph-sdk/tests/: test_emitter.py  test_event_ordering.py  test_state_hash_parity.py  test_trace_event_models.py
python/aerograph-sdk/tests/integration/: test_api_emission.py
python/aerograph-sdk/tests_integration/: __init__.py  test_collector_smoke.py
python/aerograph-sdk/tools/: check_generated_contracts.py  datamodel-codegen.toml  generate_contracts.py
specs/000-platform-vision/: spec.md
specs/001-agent-flight-recorder/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-agent-flight-recorder/checklists/: requirements.md
specs/002-trace-branching/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/003-python-support/: contracts.md  data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/004-otel-bridge/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
(+52 files in other folders)
