[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "aerograph-otel"
version = "0.1.0"
description = "OpenTelemetry bridge for AeroGraph — export and import OTLP traces."
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.10"
keywords = ["ai", "agent", "opentelemetry", "otlp", "trace", "observability", "aerograph"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development :: Libraries",
]
dependencies = [
  "aerograph-sdk>=0.2.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
  "pytest-asyncio>=0.24.0",
]

[project.urls]
Homepage = "https://github.com/SGcpu/AeroGraph"
Repository = "https://github.com/SGcpu/AeroGraph"
Issues = "https://github.com/SGcpu/AeroGraph/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/aerograph_otel"]

[tool.pytest.ini_options]
testpaths = ["src/aerograph_otel/tests"]
asyncio_mode = "auto"

[tool.hatch.metadata]
allow-direct-references = true
