[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "aerograph-sdk"
version = "0.1.0"
description = "Python SDK for AeroGraph — emit trace events from Python agent workflows."
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.10"
keywords = ["ai", "agent", "tracing", "observability", "aerograph"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development :: Libraries",
]
dependencies = [
  "httpx>=0.27.0",
  "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
  "pytest-asyncio>=0.24.0",
  "pytest-httpx>=0.30.0",
  "datamodel-code-generator>=0.25.0",
]

[project.urls]
Homepage = "https://github.com/SGcpu/AeroGraph"
Repository = "https://github.com/SGcpu/AeroGraph"
Issues = "https://github.com/SGcpu/AeroGraph/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/aerograph_sdk"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
markers = [
    "integration: marks tests as integration tests (requires external services)",
]

[tool.hatch.metadata]
allow-direct-references = true
